--- a/src/main/webapp/partials/students.html
+++ b/src/main/webapp/partials/students.html
@@ -2,7 +2,94 @@
 
 <div class="jumbotron text-center">
     <h1>Students</h1>
+
     <p>This page show all <span class="text-danger">Students</span>.</p>
 </div>
 
 <div ui-view></div>
+<div ng-controller="studentsCtrl">
+    <!-- FORM -->
+    <!-- pass in the variable if our form is valid or invalid -->
+    <!-- novalidate prevents HTML5 validation since we will be validating ourselves -->
+    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal"
+          ng-submit="submitForm(userForm.$valid)" novalidate>
+        <!--STUDENT'S FIRST NAME-->
+        <div class="form-group"
+             ng-class="{ 'has-error' : userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted}">
+            <label class="col-xs-3 control-label">First Name:</label>
+            <div class="col-xs-6">
+                <input name="firstName" class="form-control" type="text" ng-model="student.firstName"
+                       required ng-minlength="3"/>
+
+                <p ng-show="userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted"
+                   class="help-block">Student's
+                    first name is required and > 3 letters.</p>
+                <!--<p ng-show="userForm.firstName.$error.minlength" class="help-block">Student's first name is too-->
+                <!--short.</p>-->
+            </div>
+        </div>
+        <!--STUDENT'S LAST NAME-->
+        <div class="form-group"
+             ng-class="{ 'has-error' : userForm.lastName.$invalid && !userForm.lastName.$pristine  && submitted}">
+            <label class="col-xs-3 control-label">Last Name:</label>
+
+            <div class="col-xs-6">
+                <input name="lastName" class="form-control" type="text" ng-model="student.lastName"
+                       required ng-minlength="3"/>
+
+                <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine && submitted" class="help-block">Student's
+                    first name is required and > 3 letters.</p>
+                <!--<p ng-show="userForm.lastName.$error.minlength" class="help-block">Student's first name is too-->
+                <!--short.</p>-->
+            </div>
+        </div>
+        <!--STUDENT'S BIRTHDAY-->
+        <div class="form-group">
+            <label class="col-xs-3 control-label">Birthday:</label>
+
+            <div class="col-xs-6">
+                <p class="input-group">
+                    <input type="text" class="form-control" datepicker-popup="dd.MM.yyyy" ng-model="student.birthday"
+                           is-open="opened" required ng-disabled="true"
+                           close-text="Close"/>
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="openDatePicker($event)"><i
+                        class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+                </p>
+            </div>
+        </div>
+        <!--STUDENT'S YEAR OF STUDY-->
+        <div class="form-group"
+             ng-class="{ 'has-error' : userForm.year.$invalid && !userForm.year.$pristine  && submitted}">
+            <label class="col-xs-3 control-label">Year of study:</label>
+
+            <div class="col-xs-6">
+                <input name="year" class="form-control" type="text" ng-model="student.yearOfStudy"
+                       required ng-pattern="/^[0-9]{1,7}$/"/>
+
+                <p ng-show="userForm.year.$error.pattern && submitted" class="help-block">Year of study must be a number.</p>
+            </div>
+        </div>
+        <!--SUBMIT-->
+        <div class="form-group">
+            <div class="col-xs-6 col-xs-offset-3" align="right">
+                <input type="button" class="btn btn-default" type="submit" value="Submit"
+                       ng-click="saveStudent()"/>
+                <!--input argument: ng-disabled="userForm.$invalid"-->
+            </div>
+        </div>
+    </form>
+    <!--<pre>firstName = {{student.firstName}}</pre>-->
+    <!--{{students}}-->
+    <div class="table-responsive">
+        <table ng-table="studentTable" class="table table-striped table-bordered table-hover">
+            <tr ng-repeat="student in $data">
+                <td data-title="'First Name'">{{student.firstName}}</td>
+                <td data-title="'Last name'">{{student.lastName}}</td>
+                <td data-title="'Year of study'">{{student.yearOfStudy}}</td>
+                <td data-title="'Birthday'">{{student.birthday | date: 'dd.MM.yyyy'}}</td>
+            </tr>
+        </table>
+    </div>
+</div>
