--- a/src/main/webapp/partials/students.html
+++ b/src/main/webapp/partials/students.html
@@ -17,6 +17,7 @@
         <div class="form-group"
              ng-class="{ 'has-error' : userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted}">
             <label class="col-xs-3 control-label">First Name:</label>
+
             <div class="col-xs-6">
                 <input name="firstName" class="form-control" type="text" ng-model="student.firstName"
                        required ng-minlength="3"/>
@@ -37,7 +38,8 @@
                 <input name="lastName" class="form-control" type="text" ng-model="student.lastName"
                        required ng-minlength="3"/>
 
-                <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine && submitted" class="help-block">Student's
+                <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine && submitted" class="help-block">
+                    Student's
                     first name is required and > 3 letters.</p>
                 <!--<p ng-show="userForm.lastName.$error.minlength" class="help-block">Student's first name is too-->
                 <!--short.</p>-->
@@ -66,9 +68,30 @@
 
             <div class="col-xs-6">
                 <input name="year" class="form-control" type="text" ng-model="student.yearOfStudy"
-                       required ng-pattern="/^[0-9]{1,7}$/"/>
+                       required ng-pattern="/^[0-9]{1,7}$/" placeholder="Year"/>
 
-                <p ng-show="userForm.year.$error.pattern && submitted" class="help-block">Year of study must be a number.</p>
+                <p ng-show="userForm.year.$error.pattern && submitted" class="help-block">Year of study must be a
+                    number.</p>
+            </div>
+        </div>
+        <!--STUDENT'S INSTITUTION-->
+        <div class="form-group"
+             ng-class="{ 'has-error' : userForm.inst_id.$invalid && !userForm.inst_id.$pristine  && submitted}">
+            <label class="col-xs-3 control-label">Institution:</label>
+
+            <div class="col-xs-6">
+                <input name="inst_id" class="form-control" type="text" ng-model="institution.inst_id"/>
+                <!--<p ng-show="userForm.inst_id.$error.pattern && submitted" class="help-block">Institution</p>-->
+            </div>
+        </div>
+        <!--DROPDOWN LIST TESTING-->
+        <div class="form-group dropdown">
+            <label class="col-xs-3 control-label">Dropdown:</label>
+
+            <div class="col-xs-6">
+                <select class="form-control" ng-model="institution"
+                        ng-options="institution.institutionName for institution in institutions">
+                </select>
             </div>
         </div>
         <!--SUBMIT-->
@@ -89,6 +112,10 @@
                 <td data-title="'Last name'">{{student.lastName}}</td>
                 <td data-title="'Year of study'">{{student.yearOfStudy}}</td>
                 <td data-title="'Birthday'">{{student.birthday | date: 'dd.MM.yyyy'}}</td>
+                <td data-title="'Institution'">{{student.institution.institutionName}}</td>
+                <td data-title="'Delete'"><input type="button" class="btn btn-default" type="submit" value="Delete"
+                                               ng-click="deleteStudent(student.id)"/></td>
+
             </tr>
         </table>
     </div>
