--- a/src/main/webapp/partials/students.html
+++ b/src/main/webapp/partials/students.html
@@ -87,9 +87,10 @@
         <!--DROPDOWN LIST TESTING // STUDENT'S INSTITUTION-->
         <div class="form-group dropdown">
             <label class="col-xs-3 control-label">Institution:</label>
+
             <div class="col-xs-6">
                 <select class="form-control" ng-model="institution"
-                        ng-options="institution.institutionName for institution in institutions">
+                        ng-options="institution for institution in institutions">
                 </select>
             </div>
         </div>
@@ -106,16 +107,33 @@
     <!--{{students}}-->
     <div class="table-responsive">
         <table ng-table="studentTable" class="table table-striped table-bordered table-hover">
-            <tr ng-repeat="student in $data">
-                <td data-title="'First Name'">{{student.firstName}}</td>
-                <td data-title="'Last name'">{{student.lastName}}</td>
-                <td data-title="'Year of study'">{{student.yearOfStudy}}</td>
-                <td data-title="'Birthday'">{{student.birthday | date: 'dd.MM.yyyy'}}</td>
-                <td data-title="'Institution'">{{student.institution.institutionName}}</td>
-                <td data-title="'Delete'"><input type="button" class="btn btn-default" type="submit" value="Delete"
-                                                 ng-click="deleteStudent(student.id)"/></td>
-                <td data-title="'Edit'"><input type="button" class="btn btn-default" type="submit" value="Edit"
-                                               ng-click=""/></td>
+            <tr ng-repeat="studentData in $data">
+                <td data-title="'First Name'">{{studentData.firstName}}</td>
+                <td data-title="'Last name'">{{studentData.lastName}}</td>
+                <td data-title="'Year of study'">{{studentData.yearOfStudy}}</td>
+                <td data-title="'Birthday'">{{studentData.birthday | date: 'dd.MM.yyyy'}}</td>
+                <td data-title="'Institution'">{{studentData.institution.institutionName}}</td>
+                <!--<td data-title="'Delete'"><input type="button" class="btn btn-default" type="submit" value="Delete"-->
+                                                 <!--ng-click="deleteStudent(student.id)"/></td>-->
+                <!--<td data-title="'Edit'"><input type="button" class="btn btn-default" type="submit" value="Edit"-->
+                <!--ng-click="updateStudent(student.id)"/></td>-->
+                <td data-title="'Edit'" style="white-space: nowrap">
+                    <!-- form -->
+                    <form editable-form name="rowform" onbeforesave="updateStudent(student.id)"
+                          ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == student">
+                        <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary">
+                            Save
+                        </button>
+                        <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()"
+                                class="btn btn-default">
+                            Cancel
+                        </button>
+                    </form>
+                    <div class="buttons" ng-show="!rowform.$visible">
+                        <button class="btn btn-primary" ng-click="getStudent(studentData)">Edit</button>
+                        <button class="btn btn-danger" ng-click="deleteStudent(student.id)">Del</button>
+                    </div>
+                </td>
 
             </tr>
         </table>
