working after rollback

--- a/src/main/webapp/partials/students.html
+++ b/src/main/webapp/partials/students.html
@@ -77,7 +77,7 @@
                        ng-click="saveStudent()"/>
             </div>
         </div>
-        <button ng-click="pop()">Show a Toaster</button>
+        <!--<button ng-click="pop()">Show a Toaster</button>-->
     </form>
     <!--{{students}}-->
     <div class="table-responsive">
@@ -91,7 +91,7 @@
                 <td data-title="'Edit'" style="white-space: nowrap">
                         <button class="btn btn-primary" ng-click="getStudent(studentData)">Edit</button>
                         <button class="btn btn-danger" ng-click="deleteStudent(student.id)">Del</button>
-                    </div>
+
                 </td>
 
             </tr>
