--- a/src/main/webapp/partials/institutions.html
+++ b/src/main/webapp/partials/institutions.html
@@ -8,12 +8,12 @@
 
 <div ui-view></div>
 <div ng-controller="institutionsCtrl">
-    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal"
+    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal  col-sm-6"
           ng-submit="submitForm(userForm.$valid)" novalidate class="col-sm-6">
         <!--INSTITUTIONS-->
         <div class="form-group"
              ng-class="{ 'has-error' : userForm.institutionName.$invalid && !userForm.institutionName.$pristine && submitted}">
-            <label class="col-xs-3 control-label">Institution's Name:</label>
+            <label class="col-xs-3 control-label">Inst. Name:</label>
             <div class="col-xs-6">
                 <input name="institutionName" class="form-control" type="text" ng-model="institution.institutionName"
                        required ng-minlength="3"/>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <!--SUBMIT-->
-        <div class="form-group">
+        <div class="form-group" >
             <div class="col-xs-6 col-xs-offset-3" align="right">
                 <input type="button" class="btn btn-default" type="submit" value="Submit"
                        ng-click="saveInstitution()"/>
@@ -36,9 +36,15 @@
     <!-- INSTITUTIONS TABLE-->
     <div class="table-responsive"  class="col-sm-6">
         <table ng-table="institutionTable" class="table table-striped table-bordered table-hover">
-            <tr ng-repeat="institution in $data">
-                <td data-title="'ID'">{{institution.id}}</td>
-                <td data-title="'Name'">{{institution.institutionName}}</td>
+            <tr ng-repeat="institutionData in $data">
+                <td data-title="'ID'" class="col-xs-2">{{institutionData.id}}</td>
+                <td data-title="'Name'" class="col-xs-7">{{institutionData.institutionName}}</td>
+                <td data-title="'Edit'" style="white-space: nowrap" class="col-xs-5">
+                    <button class="btn btn-primary" ng-click="getStudent(studentData)"><i
+                            class="glyphicon glyphicon-pencil"></i></button>
+                    <button class="btn btn-danger" ng-click="deleteStudent(studentData.id)"><i
+                            class="glyphicon glyphicon-remove"></i></button>
+                </td>
             </tr>
         </table>
     </div>
