institution table view completed

--- a/src/main/webapp/partials/institutions.html
+++ b/src/main/webapp/partials/institutions.html
@@ -40,9 +40,9 @@
                 <td data-title="'ID'" class="col-xs-2">{{institutionData.id}}</td>
                 <td data-title="'Name'" class="col-xs-7">{{institutionData.institutionName}}</td>
                 <td data-title="'Edit'" style="white-space: nowrap" class="col-xs-5">
-                    <button class="btn btn-primary" ng-click="getStudent(studentData)"><i
+                    <button class="btn btn-primary" ng-click="getInstitution(institutionData)"><i
                             class="glyphicon glyphicon-pencil"></i></button>
-                    <button class="btn btn-danger" ng-click="deleteStudent(studentData.id)"><i
+                    <button class="btn btn-danger" ng-click="deleteInstitution(institutionData.id)"><i
                             class="glyphicon glyphicon-remove"></i></button>
                 </td>
             </tr>
