--- a/src/main/webapp/partials/students.html
+++ b/src/main/webapp/partials/students.html
@@ -8,15 +8,15 @@
 <div ui-view></div>
 <div ng-controller="studentsCtrl">
     <!-- FORM -->
-    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal"
+    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal col-sm-6"
           ng-submit="submitForm(userForm.$valid)" novalidate>
         <!--STUDENT'S FIRST NAME-->
         <div class="form-group"
              ng-class="{ 'has-error' : userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted}">
-            <label class="col-xs-3 control-label">First Name:</label>
+            <label class="col-xs-3 control-label">FName:</label>
             <div class="col-xs-6">
                 <input name="firstName" class="form-control" type="text" ng-model="student.firstName"
-                       required ng-minlength="3"/>
+                       required ng-minlength="3" placeholder="Student first name"/>
                 <p ng-show="userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted"
                    class="help-block">Student's
                     first name is required and > 3 letters.</p>
@@ -25,38 +25,50 @@
         <!--STUDENT'S LAST NAME-->
         <div class="form-group"
              ng-class="{ 'has-error' : userForm.lastName.$invalid && !userForm.lastName.$pristine  && submitted}">
-            <label class="col-xs-3 control-label">Last Name:</label>
+            <label class="col-xs-3 control-label">LName:</label>
 
             <div class="col-xs-6">
                 <input name="lastName" class="form-control" type="text" ng-model="student.lastName"
-                       required ng-minlength="3"/>
+                       required ng-minlength="3" placeholder="Student last name"/>
                 <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine && submitted" class="help-block">
                     Student's
                     first name is required and > 3 letters.</p>
             </div>
         </div>
         <!--STUDENT'S BIRTHDAY-->
+        <!--<div class="form-group">-->
+            <!--<label class="col-xs-3 control-label">Birthday:</label>-->
+            <!--<div class="col-xs-6">-->
+                <!--<p class="input-group">-->
+                    <!--<input type="text" class="form-control" datepicker-popup="dd.MM.yyyy" ng-model="student.birthday"-->
+                           <!--is-open="opened" required ng-disabled="true"-->
+                           <!--close-text="Close"/>-->
+              <!--<span class="input-group-btn">-->
+                <!--<button type="button" class="btn btn-default" ng-click="openDatePicker($event)"><i-->
+                        <!--class="glyphicon glyphicon-calendar"></i></button>-->
+              <!--</span>-->
+                <!--</p>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--STUDENT'S BIRTHDAY 720kb.datepicker-->
         <div class="form-group">
             <label class="col-xs-3 control-label">Birthday:</label>
             <div class="col-xs-6">
-                <p class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="dd.MM.yyyy" ng-model="student.birthday"
-                           is-open="opened" required ng-disabled="true"
-                           close-text="Close"/>
-              <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="openDatePicker($event)"><i
-                        class="glyphicon glyphicon-calendar"></i></button>
-              </span>
-                </p>
+                <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                    <div class="input-group">
+                        <input type="text" class="form-control" ng-model="student.birthday" placeholder="Choose a date"/>
+                        <span class="input-group-addon" style="cursor: pointer"><i class="fa fa-lg fa-calendar"></i></span>
+                    </div>
+                </datepicker>
             </div>
         </div>
         <!--STUDENT'S YEAR OF STUDY-->
         <div class="form-group"
              ng-class="{ 'has-error' : userForm.year.$invalid && !userForm.year.$pristine  && submitted}">
-            <label class="col-xs-3 control-label">Year of study:</label>
+            <label class="col-xs-3 control-label">YearStudy:</label>
             <div class="col-xs-6">
                 <input name="year" class="form-control" type="text" ng-model="student.yearOfStudy"
-                       required ng-pattern="/^[0-9]{1,7}$/" placeholder="Year"/>
+                       required ng-pattern="/^[0-9]{1,7}$/" placeholder="Student year of study"/>
                 <p ng-show="userForm.year.$error.pattern && submitted" class="help-block">Year of study must be a
                     number.</p>
             </div>
@@ -79,31 +91,20 @@
                 <!--<input type="button" class="btn btn-danger" type="submit" value="Clear" ng-click="clear()" />-->
             </div>
         </div>
-        <!--TOASTER-->
-        <!--<div class="form-group">-->
-            <!--<div class="col-xs-6 col-xs-offset-3">-->
-        <!--&lt;!&ndash;<button ng-click="pop()">Show a Toaster</button>&ndash;&gt;-->
-                <!--&lt;!&ndash; NOTE: remove 'animation-class': 'toast-top-center' if you want it on the left top corner &ndash;&gt;-->
-                <!--<toaster-container toaster-options="{'time-out': 3000, 'close-button':true, 'animation-class': 'toast-top-center'}"></toaster-container>-->
-                <!--<toaster-container toaster-options="{'time-out': 3000, 'close-button':true, 'animation-class': 'toast-top-center'}"></toaster-container>-->
-                <!--<button class="btn btn-primary" ng-click="pop()">Show toasts</button>-->
-                <!--<button class="btn btn-danger" ng-click="clear()">Clear toasts</button>-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
     </form>
     <!--{{students}}-->
-    <div class="table-responsive">
+    <div class="table-responsive col-sm-6">
         <table ng-table="studentTable" class="table table-striped table-bordered table-hover">
             <tr ng-repeat="studentData in $data">
-                <td data-title="'First Name'">{{studentData.firstName}}</td>
-                <td data-title="'Last name'">{{studentData.lastName}}</td>
-                <td data-title="'Year of study'">{{studentData.yearOfStudy}}</td>
+                <td data-title="'FName'">{{studentData.firstName}}</td>
+                <td data-title="'LName'">{{studentData.lastName}}</td>
+                <td data-title="'YearStudy'">{{studentData.yearOfStudy}}</td>
                 <td data-title="'Birthday'">{{studentData.birthday | date: 'dd.MM.yyyy'}}</td>
                 <td data-title="'Institution'">{{studentData.institution.institutionName}}</td>
                 <td data-title="'Edit'" style="white-space: nowrap">
-                        <button class="btn btn-primary" ng-click="getStudent(studentData)"><i
+                        <button class="btn btn-primary btn-xs" ng-click="getStudent(studentData)"><i
                                 class="glyphicon glyphicon-pencil"></i></button>
-                        <button class="btn btn-danger" ng-click="deleteStudent(studentData.id)"><i
+                        <button class="btn btn-danger btn-xs" ng-click="deleteStudent(studentData.id)"><i
                                 class="glyphicon glyphicon-remove"></i></button>
                 </td>
             </tr>
