--- a/src/main/webapp/partials/stmodal.html
+++ b/src/main/webapp/partials/stmodal.html
@@ -2,11 +2,13 @@
     <h3>Proceed?</h3>
 </div>
 <div class="modal-body">
-    <p>'Perform this action?'</p>
+    <p>Perform this action?</p>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn"
-            ng-click="cancel()">Close</button>
-    <button class="btn btn-primary"
-            ng-click="ok()">OK</button>
+    <button class="btn btn-primary" type="button"
+            ng-click="cancel()">Close
+    </button>
+    <button class="btn btn-warning"
+            ng-click="ok()">OK
+    </button>
 </div>
