--- a/src/main/webapp/partials/stmodal.html
+++ b/src/main/webapp/partials/stmodal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3>Proceed?</h3>
+    <h3>Delete student?</h3>
 </div>
 <div class="modal-body">
     <p>Perform this action?</p>
@@ -8,7 +8,5 @@
     <button class="btn btn-primary" type="button"
             ng-click="cancel()">Close
     </button>
-    <button class="btn btn-warning"
-            ng-click="ok()">OK
-    </button>
+    <button class="btn btn-warning" ng-click="ok()">Delete</button>
 </div>
