--- a/src/main/webapp/partials/students.html
+++ b/src/main/webapp/partials/students.html
@@ -2,13 +2,14 @@
 
 <div class="jumbotron text-center">
     <h1>Students</h1>
+
     <p>This page show all <span class="text-danger">Students</span>.</p>
 </div>
 
 <div ui-view></div>
 <div ng-controller="studentsCtrl">
     <!-- FORM -->
-    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal col-sm-6"
+    <form name="userForm" data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal col-sm-5"
           ng-submit="submitForm(userForm.$valid)" novalidate>
         <!--STUDENT'S FIRST NAME-->
         <div class="form-group"
@@ -19,9 +20,9 @@
                 <input name="firstName" class="form-control" type="text" ng-model="student.firstName"
                        required ng-minlength="3" placeholder="Student first name"/>
 
-                <p ng-show="userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted"
-                   class="help-block">Student's
-                    first name is required and > 3 letters.</p>
+                <!--<p ng-show="userForm.firstName.$invalid && !userForm.firstName.$pristine && submitted"-->
+                   <!--class="help-block">Student's-->
+                    <!--first name is required and > 3 letters.</p>-->
             </div>
         </div>
         <!--STUDENT'S LAST NAME-->
@@ -33,15 +34,14 @@
                 <input name="lastName" class="form-control" type="text" ng-model="student.lastName"
                        required ng-minlength="3" placeholder="Student last name"/>
 
-                <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine && submitted" class="help-block">
-                    Student's
-                    first name is required and > 3 letters.</p>
+                <!--<p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine && submitted" class="help-block">-->
+                    <!--Student's-->
+                    <!--first name is required and > 3 letters.</p>-->
             </div>
         </div>
         <!--STUDENT'S BIRTHDAY 720kb.datepicker-->
         <div class="form-group">
             <label class="col-xs-3 control-label">Birthday:</label>
-
             <div class="col-xs-6">
                 <datepickers date-format="yyyy-MM-dd" selector="form-control">
                     <div class="input-group">
@@ -61,18 +61,17 @@
             <div class="col-xs-6">
                 <input name="year" class="form-control" type="text" ng-model="student.yearOfStudy"
                        required ng-pattern="/^[0-9]{1,7}$/" placeholder="Student year of study"/>
-
-                <p ng-show="userForm.year.$error.pattern && submitted" class="help-block">Year of study must be a
-                    number.</p>
+                <!--<p ng-show="userForm.year.$error.pattern && submitted" class="help-block">Year of study must be a-->
+                    <!--number.</p>-->
             </div>
         </div>
         <!--DROPDOWN LIST TESTING // STUDENT'S INSTITUTION-->
         <div class="form-group dropdown">
-            <label class="col-xs-3 control-label">Institution:</label>
+            <label class="col-xs-3 control-label">Institutia:</label>
             <div class="col-xs-6">
                 <select class="form-control" ng-model="institution"
                         ng-options="institution for institution in institutions">
-                    <option value='' disabled selected style='display:none;'>Select institution</option>
+                    <option value='' disabled selected style='display:none;'>Selecteaza institutia</option>
                 </select>
             </div>
         </div>
@@ -80,8 +79,10 @@
         <div class="form-group dropdown">
             <label class="col-xs-3 control-label">Facultate:</label>
             <div class="col-xs-6">
-                <select class="form-control" ng-model="facultate"
-                        ng-options="facultate for facultate in facultati"/>
+                <select class="form-control" ng-model="facultati"
+                        ng-options="facultati for facultati in facultatile">
+                    <option value='' disabled selected style='display:none;'>Selecteaza facultatea</option>
+                </select>
             </div>
         </div>
         <!--SUBMIT + TOASTER-->
@@ -95,18 +96,18 @@
         </div>
     </form>
     <!--{{students}}-->
-    <div class="table-responsive col-sm-6">
+    <div class="table-responsive col-sm-7">
         <table ng-table="studentTable" class="table table-striped table-bordered table-hover">
             <tr ng-repeat="studentData in $data">
-                <td data-title="'FName'">{{studentData.firstName}}</td>
-                <td data-title="'LName'">{{studentData.lastName}}</td>
-                <td data-title="'YearStudy'">{{studentData.yearOfStudy}}</td>
-                <td data-title="'Birthday'">{{studentData.birthday | date: 'dd.MM.yyyy'}}</td>
+                <td data-title="'Fam'">{{studentData.firstName}}</td>
+                <td data-title="'Nume'">{{studentData.lastName}}</td>
+                <td data-title="'AnS'">{{studentData.yearOfStudy}}</td>
+                <td data-title="'ZiNas'">{{studentData.birthday | date: 'dd.MM.yyyy'}}</td>
                 <!-- Student -> Institution -->
-                <!--<td data-title="'Institution'">{{studentData.institution.institutionName}}</td>-->
+                <td data-title="'Inst'">{{studentData.institution.institutionName}}</td>
                 <!-- Student -> Facultate -->
-                <td data-title="'Facultate'">{{studentData.facultate.numeFacultate}}</td>
-                <td data-title="'Edit'" style="white-space: nowrap">
+                <td data-title="'Fac'">{{studentData.facultate.numeFacultate}}</td>
+                <td data-title="'Editeaza'" style="white-space: nowrap">
                     <button class="btn btn-primary btn-xs" ng-click="getStudent(studentData)">
                         <i class="glyphicon glyphicon-pencil"></i></button>
                     <!--<button class="btn btn-danger btn-xs" ng-click="deleteStudent(studentData.id)">-->
